tests/org.eclipse.php.core.tests/workspace/errors/php53/testTypeReferenceError7.pdtt
--TEST--
Bug 516485 - Constants are validated as types
--FILE--
<?php
namespace error\ns1;

echo \E_ALL;
echo \name\A;
\name\func();
echo A::NAME;
echo E_ALL;
func();

--EXPECT--
[line=5, start=46, end=51] \name cannot be resolved to a type
[line=7, start=74, end=75] A cannot be resolved to a type